section 2 done and fixed some bugs

--- a/pages/About.html
+++ b/pages/About.html
@@ -561,7 +561,7 @@ margin-left: 15px;
 
                 <li><a href="https://www.facebook.com/Clear.Bible.Answers/"><button><img src="/img/facebook.png" style="width:150px;"></button></a></li>
 
-                <li><a href="/img/email.png"><button><img src="/img/email copy.png"style="width:110px;"></button></a></li>
+                <li><a href="/img/email.png"><button><img src="/img/email copy 2.png"style="width:110px;"></button></a></li>
 
                 <li><a href="/img/whatsaap.png"><button><img src="/img/whats.png" style="width: 130px;"></button></a></li>
                 
