--- a/pages/Clear bible answers.html
+++ b/pages/Clear bible answers.html
@@ -442,6 +442,36 @@ text-align: center;
 }
 
 
+@media screen and (max-width: 1196px) {
+    .top-foot {
+        height: 430px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .top-foot {
+        height: 520px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .top-foot {
+        height: 1000px;
+        display: flex;
+        flex: 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+.footer-section .f-1 {
+    width: 500px;
+}
+
+
+   
+}
+
+
 
 
 
