--- a/pages/Books.html
+++ b/pages/Books.html
@@ -503,15 +503,66 @@ justify-content:space-evenly;
 margin-left: 15px;
 }
 
+.h1 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 10vh;
+    background-color: rgba(29, 29, 29, 0.801);
+}
 
+.h1 h1 {
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
+    font-size: 50px;
+    margin-top: 0.5%;
+}
+
+.para {
+width: 100%;
+display: flex;
+justify-content: center;
+}
+
+.para h3 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 40px;
+    color: rgb(29, 29, 29);
+}
 
 
 
 </style>
 
 <!--Page-wrapper-->
-<div class="page-wrapper"></div>
-</!--Page-wrapper-->
+<div class="page-wrapper" style="margin-top: 100px;">
+
+    <div class="headd">
+        <div class="h1">
+    <h1>Books</h1>
+
+</div>
+
+<div class="para">
+    <h3>Its crucial to have Answers in Written form!
+        Here are some of my Books:</h3>
+
+    </div>
+
+    </div>
+
+
+
+    <div class="books">
+
+        
+
+
+    </div>
+
+</div>
+<!--Page-wrapper-->
 
 
 
