about section done

--- a/pages/Books.html
+++ b/pages/Books.html
@@ -677,7 +677,7 @@ justify-content: center;
             </div>
         </div>
     <div class="bottom-foot">
-        <h4>Copyright ©2020 | All Rights Reserved | This website was Designed and Created by Marc Pedrin</h4>
+        <h4>Copyright ©2006 - 2020 | All Rights Reserved | This website was Designed and Created by Marc Pedrin</h4>
         </div>
     </div>
     </!--footer-->
