--- a/pages/Watch.html
+++ b/pages/Watch.html
@@ -195,7 +195,7 @@ margin-left: 70px;
                         <li><a href="#" style="padding: 15px 20px;">Polygamy</a></li>
                         <li><a href="#" style="padding: 15px 20px;">Trinity</a></li>
                         <li><a href="#" style="padding: 15px 20px;">Lunar Sabbath</a></li>
-                        <li><a href="#" style="padding: 15px 20px; font-size: 35px;">1,44,000</a></li>
+                        <li><a href="#" style="padding: 5px 20px; font-size: 30px;">1,44,000</a></li>
                         
                     </ul>
                 </div>
@@ -203,7 +203,7 @@ margin-left: 70px;
                 <li><a href="/pages/Watch.html" style="padding: 36px 15px;">Watch</a></li>
                 <li><a href="/pages/listen.html" style="padding: 36px 15px;">Listen</a></li>
                 <li><a href="/pages/Presentations.html" style="padding: 36px 15px;">Presentations</a></li>
-                <li><a href="/pages/About.html" style="padding: 6px 5px;">About</a></li>
+                <li><a href="/pages/About.html" style="padding: 36px 15px;">About</a></li>
             </ul>
             <label for="nav-toggle" class="icon-burger">
                 <div class="line"></div>
@@ -220,13 +220,13 @@ margin-left: 70px;
 
 .drop-down {
     display: none;
-    margin-top: 474px;
+    margin-top: 445px;
     position: absolute;
     margin-right: 30%;
     background-color: rgb(29, 29, 29);
 }
 
-nav .links:hover .drop-down {
+.dude:hover .drop-down {
     display: flex;
 }
 
@@ -672,7 +672,7 @@ margin-left: 15px;
             </div>
         </div>
     <div class="bottom-foot">
-        <h4>Copyright ©2020 | All Rights Reserved | This website was Designed and Created by Marc Pedrin</h4>
+        <h4>Copyright ©2006 - 2020 | All Rights Reserved | This website was Designed and Created by Marc Pedrin</h4>
         </div>
     </div>
     </!--footer-->
