--- a/pages/listen.html
+++ b/pages/listen.html
@@ -626,7 +626,7 @@ margin-left: 15px;
             </div>
         </div>
     <div class="bottom-foot">
-        <h4>Copyright ©2020 | All Rights Reserved | This website was Designed and Created by Marc Pedrin</h4>
+        <h4>Copyright ©2006 - 2020 | All Rights Reserved | This website was Designed and Created by Marc Pedrin</h4>
         </div>
     </div>
     </!--footer-->
