--- a/pages/144000.html
+++ b/pages/144000.html
@@ -594,6 +594,9 @@
     z-index: 999999999;
 }
 
+button:focus{
+            outline: none;
+        }
 .cursor::after {
     content: "";
     width: 20px;
