--- a/pages/Books.html
+++ b/pages/Books.html
@@ -546,6 +546,9 @@ justify-content: center;
 
 }
 
+button:focus{
+            outline: none;
+        }
 .books-container .card-1 a H1 {
 
 color: black;
@@ -576,6 +579,8 @@ font-size: 55px;
     margin: 40px;
     text-decoration: none;
 }
+
+
 
 .grid .books-container .card-1 a h1{
     margin: 20px;
