--- a/pages/Presentations.html
+++ b/pages/Presentations.html
@@ -417,6 +417,7 @@ min-height: 100%;
 
 html, body {
 min-height: 100%;
+
 }
 
 .footer .top-foot {
@@ -568,6 +569,10 @@ margin-left: 15px;
 .cursor {
     z-index: 999999999;
 }
+
+button:focus{
+            outline: none;
+        }
 
 
 </style>
