--- a/pages/clarified.html
+++ b/pages/clarified.html
@@ -639,6 +639,10 @@
     border: 1px solid rgb(0, 153, 255);
 }
 
+button:focus{
+            outline: none;
+        }
+
 .cursor {
     z-index: 999999999;
 }
