--- a/pages/index.html
+++ b/pages/index.html
@@ -32,11 +32,31 @@
 </div>
 
 
+
+
+
     </nav>
+
+    <div class="page-wrapper">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum recusandae quam minima veniam eius aspernatur.</p>
+    </div>
+
+
 
 <style>
  
+h1{
+    color: rgb(29, 29, 29);
+}
 
+p {
+    display: flex;
+}
+
+h1:hover p {
+    display: none;
+}
 
 * {
     margin: 0;
