--- a/pages/lunar sabbath.html
+++ b/pages/lunar sabbath.html
@@ -649,6 +649,10 @@
     z-index: 999999999;
 }
 
+button:focus{
+            outline: none;
+        }
+
 
     </style>
 <div class="cursor"></div>
