--- a/pages/michaels profile.html
+++ b/pages/michaels profile.html
@@ -569,7 +569,9 @@ margin-left: 15px;
         opacity: 0;
     }
 }
-
+button:focus{
+            outline: none;
+        }
 .expand {
     animation: cursorAnim3 .5s forwards;
     border: 1px solid rgb(0, 153, 255);
