--- a/pages/About.html
+++ b/pages/About.html
@@ -652,6 +652,9 @@ margin-top: -100px;
             font-family: "poppins", sans-serif;
             font-size: 50px;
         }
+        button:focus{
+            outline: none;
+        }
 
         .michael p {
             font-family: "poppins", sans-serif;
