--- a/pages/plain.html
+++ b/pages/plain.html
@@ -452,6 +452,10 @@ letter-spacing: 3px;
 font-size: 16px;
 }
 
+button:focus{
+            outline: none;
+        }
+
 .list {
 list-style: none;
 }
