--- a/pages/trinity.html
+++ b/pages/trinity.html
@@ -642,7 +642,9 @@
         opacity: 0;
     }
 }
-
+button:focus{
+            outline: none;
+        }
 .expand {
     animation: cursorAnim3 .5s forwards;
     border: 1px solid rgb(0, 153, 255);
