--- a/test/index.html.html
+++ b/test/index.html.html
@@ -1,18 +1,65 @@
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="stylesheet.css">
+  <title>test</title>
+</head>
+<body>
+  <div class="button-testing">
+    <div class="button">
+      <div class="lines">
+        <div class="line e1"></div>
+        <div class="line e2"></div>
+        <div class="line e3"></div>
+        <div class="line e4"></div>
+      </div>
+
+      <button>Watch Video</button>
+    </div>
+  </div>
+</body>
+</html>-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Get Data From API</title>
+  <title>test
+  </title>
 </head>
 <body>
-  <div class="container">
-    <h2>User Data</h2>
-    <button id="btn">qna</button>
-    <div id="result"></div>
+  <div class="slider">
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
   </div>
-<script src="/app.js"></script>
+
+  <style>
+    .slider{
+      width: 100%;
+    }
+  </style>
 </body>
-</html
+</html>
