--- a/pages/Clear bible answers.html
+++ b/pages/Clear bible answers.html
@@ -462,7 +462,7 @@
             }
 
 
-            @media screen and (max-width: 768px; ) {
+            @media screen and (max-width: 768px ) {
 
                 /*.footer .top-foot{
         height: 110vh;
@@ -693,7 +693,8 @@
             .item-2 a h5 {
                 font-family: 'Clicker Script', cursive;
                 font-size: 21px;
-                padding-left: 25px cursor: pointer;
+                padding-left: 25px;
+                 cursor: pointer;
             }
 
             .item-3 {
