MOST PROBALLY FINAL!!

--- a/pages/Clear bible answers.html
+++ b/pages/Clear bible answers.html
@@ -929,7 +929,7 @@
 
             .expand {
                 animation: cursorAnim3 .5s forwards;
-                border: 1px solid rgb(0, 153, 255);
+                boder: 1px solid rgb(0, 153, 255);
             }
 
 
